--- a/NetCoreApps/MvcMovie3.1/MvcMovie/Views/_ViewImports.cshtml
+++ b/NetCoreApps/MvcMovie3.1/MvcMovie/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using MvcMovie3._1
-@using MvcMovie3._1.Models
+﻿@using MvcMovie
+@using MvcMovie.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
